--- a/index.html
+++ b/index.html
@@ -43,49 +43,36 @@
     <!-- SLIDES -->
     <slide class="" id="slide-1" style="background:;">
   <hgroup>
-    <h2>Read-And-Delete</h2>
+    <h2>Things to do this week</h2>
   </hgroup>
   <article data-timings="">
     <ol>
-<li>Edit YAML front matter</li>
-<li>Write using R Markdown</li>
-<li>Use an empty line followed by three dashes to separate slides!</li>
+<li>Write best man speech</li>
+<li>Submit Data Scientists Toolbox assignment</li>
+<li>Get 20/20 on DST Quiz 3</li>
+<li>Start R Programming course</li>
+<li>explore the ebooks I bought</li>
 </ol>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="class" id="id" style="background:;">
+<slide class="" id="slide-2" style="background:;">
   <hgroup>
-    <h2>Slide 2</h2>
+    <h2>Things to sort out before end of August</h2>
   </hgroup>
   <article data-timings="">
-    <h2>Things to do this week</h2>
-
-<p>*Write best man speech
-*Submit Data Scientists Toolbox assignment
-*Get 20/20 on DST Quiz 3
-*Start R Programming course
-*explore the ebooks I bought</p>
+    <ol>
+<li>Research the best tools to become paperless and efficient in storing notes</li>
+<li>Get comfortable with git, github and RStudio (Can you use git from within RStudio?)</li>
+</ol>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="" id="slide-3" style="background:;">
-  <hgroup>
-    <h2>Things to sort out before end of August</h2>
-  </hgroup>
-  <article data-timings="">
-    <p>*Research the best tools to become paperless and efficient in storing notes
-*Get comfortable with git, github and RStudio (Can you use git from within RStudio?)</p>
-
-  </article>
-  <!-- Presenter Notes -->
-</slide>
-
-<slide class="" id="slide-4" style="background:;">
   <hgroup>
     <h2>END</h2>
   </hgroup>
@@ -101,26 +88,20 @@
     <ul>
       <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=1 title='Read-And-Delete'>
+        data-slide=1 title='Things to do this week'>
          1
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='Slide 2'>
+        data-slide=2 title='Things to sort out before end of August'>
          2
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='Things to sort out before end of August'>
+        data-slide=3 title='END'>
          3
-      </a>
-    </li>
-    <li>
-      <a href="#" target="_self" rel='tooltip' 
-        data-slide=4 title='END'>
-         4
       </a>
     </li>
   </ul>
