--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <li>Get 20/20 on DST Quiz 3</li>
 <li>Start R Programming course</li>
 <li>explore the ebooks I bought</li>
+<li>Be able to publish with slidify via RStudio</li>
 </ol>
 
   </article>
