items ticked off

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     <!-- SLIDES -->
     <slide class="" id="slide-1" style="background:;">
   <hgroup>
-    <h2>Things to do this week</h2>
+    <h2>Things to do this week - i.e. before 14th July</h2>
   </hgroup>
   <article data-timings="">
     <ol>
 <li>Write best man speech</li>
-<li>Submit Data Scientists Toolbox assignment</li>
-<li>Get 20/20 on DST Quiz 3</li>
-<li>Start R Programming course</li>
+<li><del>Submit Data Scientists Toolbox assignment</del></li>
+<li><del>Get 20/20 on DST Quiz 3</del></li>
+<li><del>Start R Programming course</del></li>
 <li>explore the ebooks I bought</li>
 <li>Be able to publish with slidify via RStudio</li>
 </ol>
@@ -89,7 +89,7 @@
     <ul>
       <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=1 title='Things to do this week'>
+        data-slide=1 title='Things to do this week - i.e. before 14th July'>
          1
       </a>
     </li>
