--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
   </hgroup>
   <article data-timings="">
     <ol>
-<li>Write best man speech</li>
+<li><strong>Write best man speech</strong> </li>
 <li><del>Submit Data Scientists Toolbox assignment</del></li>
 <li><del>Get 20/20 on DST Quiz 3</del></li>
 <li><del>Start R Programming course</del></li>
 <li>explore the ebooks I bought</li>
-<li>Be able to publish with slidify via RStudio</li>
+<li>Be able to publish with slidify via RStudio - <em>RStudio cant find git hub</em></li>
 </ol>
 
   </article>
