--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </hgroup>
   <article data-timings="">
     <ol>
-<li><strong>Write best man speech</strong> </li>
+<li><del>Write best man speech</del></li>
 <li><del>Submit Data Scientists Toolbox assignment</del></li>
 <li><del>Get 20/20 on DST Quiz 3</del></li>
 <li><del>Start R Programming course</del></li>
